fixed z-index of tooltip

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -1,3 +1,4 @@
 .tooltip {
   position: fixed;
+  z-index: 1;
 }
